# smack-imc

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  index.rst.rst  intro.rst  modules.rst  parameter_sweep.rst  smack_imc.rst
smack_imc/: __init__.py  register.py
